# project_x

./: .gitignore  CMakeLists.txt  CMakelists.txt  README.md  data.txt  main.cpp
.github/workflows/: can_messages_pipeline.yaml  file_io_pipeline.yaml  main_component_pipeline.yaml  project_x_pipeline.yaml
can_messages/: CMakeLists.txt  experiments.py  input_header.txt  input_source.txt  min_signals.json  min_signals_mod.json  output_header.txt  output_source.txt  script.py  signals_biglist.json
can_messages/input/: comments_header.txt  header_id.txt  template_id.txt  template_set_and_get_function.txt  top_code_header.txt  top_code_source.txt  typedef_header.txt
file_io/: CMakeList.txt  CMakeLists.txt  CMakelists.txt  FileIO.h  main.cpp
file_io/app/src/: main.cpp
file_io/file_io/: FileIO.h
file_io/lib/include/: FileIO.h
file_io/lib/src/: file_io.cpp
file_io/lib/ut/: lib_ut_tests.cpp  tests.cpp
ideas/: planning.txt
main_component/: CMakeLists.txt
main_component/src/: commands_biglist.txt  input_file.txt  main.cpp
main_component/tests/: input.txt  readme.md  test_mc.py
